# IsolatedMatMulCommit

./: CMakeLists.txt  README.md  comparison.cpp
include/: CommitOriginalDataStructure.hpp  ThreadedMatrixVecMultiplication.hpp  ThreadedMatrixVecMultiplicationNoLUT.hpp  matrixVecMultiplication.hpp
lib/SparseDataStructures/: CMakeLists.txt
lib/SparseDataStructures/include/: LinearAlgebra.hpp
lib/SparseDataStructures/src/: CSCMatrix.cu  CSCMatrixKernels.cu  CSRMatrix.cu  CSRMatrixKernels.cu  Matrix.cu  MatrixKernels.cu  Vector.cu  VectorKernels.cu  utils.cpp
lib/SparseDataStructures/test/: CSCMatrixUnitTest.cpp  CSRMatrixUnitTest.cpp  MatrixUnitTest.cpp  MeasureTime.cpp  MeasureTime.hpp  VectorUnitTest.cpp
src/: CommitOriginalDataStructure.cpp  GpuMatrixMultiplication.cu  ThreadedMatrixVecMultiplication.cpp  ThreadedMatrixVecMultiplicationNoLUT.cpp  sequentialMatrixVecMultiplication.cpp  threadedMatrixVecMultiplication.cpp  utils.cpp
